--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,13 @@
           <version>23.0.0</version>
           <scope>compile</scope>
       </dependency>
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.6.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
